# bibrus

./: .gitignore  README.md
.github/workflows/: backend.yml  general.yml
backend/: Cargo.toml
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/migrations/2022-10-09-121650_auth/: down.sql  up.sql
backend/migrations/2022-10-27-183844_school/: down.sql  up.sql
backend/src/: administration.rs  auth.rs  database.rs  grades.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/routes/: admin.rs  auth.rs
backend/tests/: auth.rs  tools.rs
frontend/: README.md  app.vue  nuxt.config.ts  package.json
frontend/layouts/: default.vue
frontend/pages/: login.vue
frontend/ts-modules/: api-url.ts
