[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.1", features = ["full"] }
rust-argon2 = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
tower-http = { version = "0.2.0", features = ["add-extension"] }