[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["macros"] }
# https://docs.rs/axum-extra/0.3.7/axum_extra/
axum-extra = { version = "0.3.7", features = ["cookie", "cookie-signed"] }
tokio = { version = "1.21.1", features = ["full"] }
# https://github.com/diesel-rs/diesel/blob/2.0.x/diesel/Cargo.toml
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "time", "uuid","postgres_backend"] }
rust-argon2 = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
tower-http = { version = "0.2.0", features = ["add-extension", "trace"] }
time = { version = "0.3.15", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
zxcvbn = "2.2.1"
dotenv = "0.15.0"
anyhow = "1.0.65"
thiserror = "1.0.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1.0.87"

[dev-dependencies]
reqwest = { version = "0.11.12", features = ["json", "cookies"] }
